objects/Training_Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_End_Time__c</fullName>
        <label>Course End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Start_Time__c</fullName>
        <label>Course Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <description>A short description of this course&apos;s purpose.</description>
        <label>Synopsis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Training Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>